public/css/index.css
/*--- Hero image ---*/
.home-inner {
  background-image: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6) ), url("../images/jumbotron-bg.png");
}

.caption {
  position: absolute;
  width: 100%;
  max-width: 100%;
  top: 38%;
  color: white;
  z-index: 1;
}

.caption h1 {
  letter-spacing: 0.15rem;
  text-shadow: 0.1rem 0.1rem 1.5rem black;
}


/*--- Owl carousel cards ---*/
.member-info .circle-img {
  border-radius: 100px;
  height: 120px;
  width: 120px !important;
  border: 0.2px solid lightgrey;
  margin-bottom: 10px;
}

.owl-stage-outer {
  padding-top: 30px;
  padding-bottom: 20px;
}

.owl-carousel .item {
  display: flex;
  justify-content: center;
  align-items: center;
  background: white;
  margin-bottom: 20px;
  height: 300px;
}


.member-info {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

/*--- Owl carousel flip cards ---*/
.flip-card {
  perspective: 1000px; /* Remove this if you don't want the 3D effect */
}

/* This container is needed to position the front and back side */
.flip-card-inner {
  position: relative;
  width: 100%;
  height: 100%;
  border-radius: 4px;
  padding: 5%;
  text-align: center;
  transition: transform 0.8s;
  transform-style: preserve-3d;
  -webkit-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
  -moz-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
}

/* Do an horizontal flip when you move the mouse over the flip box container */
.flip-card:hover .flip-card-inner {
  transform: rotateY(180deg);
}

.flip-card-front {
  -webkit-backface-visibility: hidden; /* Safari */
  backface-visibility: hidden;
}


/* Style the back side */
.flip-card-back {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  position: absolute;
  width: 100%;
  height: 100%;
  -webkit-backface-visibility: hidden; /* Safari */
  backface-visibility: hidden;
  background-color: rgb(212,53,28);
  color: white;
  transform: rotateY(180deg);
}


/*--- Owl carousel next and prev buttons ---*/
.owl-prev, .owl-next {
  width: 15px;
  height: 100px;
  position: absolute;
  top: 50%;
  font-size: 30px !important;
  transform: translateY(-50%);
  display: block !important;
  border:0px solid black;
}

.owl-prev:hover, .owl-next:hover {
  background: none !important;
  color: black !important;
}

.owl-prev:focus, .owl-next:focus {
  outline: none;
}

.owl-prev { left: -40px; }
.owl-next { right: -40px; }
.owl-prev i, .owl-next i {
  transform : scale(2,5);
  color: #ccc;
}

 

